added more process descriptions

--- a/templates/cm/index.html
+++ b/templates/cm/index.html
@@ -166,6 +166,57 @@
             <center>
                 <img width="95%" src="{{ url_for('static', filename='img/cm.png') }}"/>
             </center>
+        </div>
+        
+        <div class="col-lg-12">
+            
+            <h3 class="text-primary">1.0 - Recepción de Solicitud de Cambios</h3>
+            <p class="text-justify">
+                Las personas responsables de implementar un cambio, son las personas responsables de documentar y emitir una
+                solicitud de cambio. 
+                <br>
+                Antes de iniciar el proceso de preparación para realizar un cambio, todos los aspectos técnicos de este cambio 
+                deben ser coordinados entre quien solicita el cambio y quienes tienen la responsabilidad de implementar el 
+                cambio como tal. Todos los cambios deben ser verificados previamente a la implementación y toda la información
+                relacionada al éxito o fallas obtenidas como reesultado de las pruebas junto con la solicitud de cambio (RFC). 
+            </p>
+            
+            <hr>
+            
+            <h3 class="text-primary">1.1 - Definición de Alcance</h3>
+            <p class="text-justify">
+                
+                Para deifnir el alcance de un cambio, se debe identificar las plataformas que serán impactadas, la duración de 
+                la ventana  de mantenimiento requerida para implementar los cambios, unidades de negocio y departamentos y se 
+                deben identificar riesgos. Esta información se utiliza en varios puntos de decisión durante el proceso. 
+                <br>
+                La complejidad de los cambios debe ser entendida y comunicada a la o las personas responsables de aprobar el
+                cambio. 
+            </p>
+            
+            
+            <h3 class="text-primary">1.2 - Borrador de Solicitud de Cambio</h3>
+            <p class="text-justify">
+                
+                Una vez que el alcance de un cambio es definido, los datos se deben consolidar en un documento de solicitud de 
+                cambio. Todos los datos relacionados a los detalles de implementación, verificación y contingencias se deben
+                incluir en la solicitud de cambio. Finalmente, es responsabilidad del solicitante, determinar el nivel de 
+                riesgo asociado al cambio. 
+            </p>
+            
+            <h3 class="text-primary">1.3 - Creación de Solicitud de Cambio</h3>
+            <p class="text-justify">
+                La solicitud debe ser enviada a revisión dentro de los tiempos establecidos para garantizar que los usuarios
+                reciban la notificación de cambios con suficiente antelación. La ventana máxima de duración de un cambio, no 
+                debería exceder los 7 días para una única solicitud de cambio. 
+            </p>
+            
+            <h3 class="text-primary">1.3 - Creación de Solicitud de Cambio</h3>
+            <p class="text-justify">
+                La solicitud debe ser enviada a revisión dentro de los tiempos establecidos para garantizar que los usuarios
+                reciban la notificación de cambios con suficiente antelación. La ventana máxima de duración de un cambio, no 
+                debería exceder los 7 días para una única solicitud de cambio. 
+            </p>
             
         </div>
         
