--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,8 @@
               <ul class="nav navbar-nav">
                 <li><a href="/">Catálogo</a></li>
                 <li><a href="{{url_for('get_casos')}}">Casos</a></li>
-                  <li><a href="{{ url_for('rfc') }}">Solicitud de Cambio</a></li>
+                <li><a href="{{ url_for('change_management_home') }}">Gestión de Cambios</a></li>
+                <li><a href="{{ url_for('rfc') }}">Solicitud de Cambio</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="">*</a></li>
