Más entradas en el proceso de CM

--- a/templates/cm/index.html
+++ b/templates/cm/index.html
@@ -170,7 +170,7 @@
         
         <div class="col-lg-12">
             
-            <h3 class="text-primary">1.0 - Recepción de Solicitud de Cambios</h3>
+            <h3 class="text-primary">1 - Recepción de Solicitud de Cambios</h3>
             <p class="text-justify">
                 Las personas responsables de implementar un cambio, son las personas responsables de documentar y emitir una
                 solicitud de cambio. 
@@ -183,7 +183,7 @@
             
             <hr>
             
-            <h3 class="text-primary">1.1 - Definición de Alcance</h3>
+            <h4 class="text-primary">1.1 - Definición de Alcance</h4>
             <p class="text-justify">
                 
                 Para deifnir el alcance de un cambio, se debe identificar las plataformas que serán impactadas, la duración de 
@@ -195,7 +195,7 @@
             </p>
             
             
-            <h3 class="text-primary">1.2 - Borrador de Solicitud de Cambio</h3>
+            <h4 class="text-primary">1.2 - Borrador de Solicitud de Cambio</h4>
             <p class="text-justify">
                 
                 Una vez que el alcance de un cambio es definido, los datos se deben consolidar en un documento de solicitud de 
@@ -204,18 +204,146 @@
                 riesgo asociado al cambio. 
             </p>
             
-            <h3 class="text-primary">1.3 - Creación de Solicitud de Cambio</h3>
+            <h4 class="text-primary">1.3 - Creación de Solicitud de Cambio</h4>
             <p class="text-justify">
                 La solicitud debe ser enviada a revisión dentro de los tiempos establecidos para garantizar que los usuarios
                 reciban la notificación de cambios con suficiente antelación. La ventana máxima de duración de un cambio, no 
                 debería exceder los 7 días para una única solicitud de cambio. 
             </p>
             
-            <h3 class="text-primary">1.3 - Creación de Solicitud de Cambio</h3>
+            <hr>
+            <h3 class="text-primary">2 - Revisión/Evaluación de Solicitud de Cambio</h3>
             <p class="text-justify">
-                La solicitud debe ser enviada a revisión dentro de los tiempos establecidos para garantizar que los usuarios
-                reciban la notificación de cambios con suficiente antelación. La ventana máxima de duración de un cambio, no 
-                debería exceder los 7 días para una única solicitud de cambio. 
+                Una vez que una solicitud de cambio es recibida, se da inicio al proceso de revisión y evaluación. Este proceso 
+                cuenta con al menos dos niveles de revisión antes de ser programada la implementación del cambio. 
+            </p>
+            
+            <hr>
+            <h4 class="text-primary">2.1 - Verificación de Control de Calidad</h4>
+            <p class="text-justify">
+                Una cambio debe ser verificado en términos de:
+            </p>
+            <ul>
+                <li>Acciones correctivas</li>
+                <li>Mejora de sistema</li>
+                <li>Análisis de impacto y riesgo</li>
+                <li>Caso de negocio</li>
+            </ul>
+            
+            
+            <h4 class="text-primary">2.2 - Verificación de Especificación del Cambio</h4>
+            <p class="text-justify">
+                Cada grupo de responsables de aprobaciones debe tener personas determinadas para realizar las revisiones de todas las
+                solicitudes de cambios. Este recurso es responsable de revisar todos los cambios que afectan el grupo determinado y que
+                están en espera de ser implementados. Este recurso debe validar el impacto en su grupo y notificar a todos los miembros
+                de su grupo. Se debe verificar que toda la información en la solicitud de cambio es suficiente para garantizar la aprobación 
+                de la misma y de ser así, aprobar la solicitud.
+            </p>
+            
+            
+            <h4 class="text-primary">2.3 - Asignación de recursos</h4>
+            <p class="text-justify">
+                Para que cada cambio sea exitoso, se debe hacer la asignación de recursos apropiada. Los siguientes son recursos que siempre
+                se deben considerar para todos los cambios:
+            </p>
+            <ul>
+                <li>Tiempo de la ventana de mantenimiento para implementar el cambio</li>
+                <li>Personal para llevar acabo la implementación</li>
+                <li>Interfaces con otros grupos para garantizar las facilidades de prueba adecuadas</li>
+                <li>Acceso lógico y físico</li>
+            </ul>
+            
+            
+            <h4 class="text-primary">2.4 - Aprobación o denegación de cambios</h4>
+            <p class="text-justify">
+                Después de realizar la revisión pertinente de los cambios, los aprobadores pueden ya sea aceptar o denegar los cambios. Los
+                responsables de realizar las aprobaciones se deben comunicar con los solicitates del cambio lo más pronto posible para resolver
+                cualquier problema. Si algún problema no puede ser solucionado, entonces se debe cancelar la solicitud y volver a planificar
+                una nueva solicitud de cambio. 
+            </p>
+            
+            <hr> <!-- ---------------------------------------------------------- -->
+            
+            <h3 class="text-primary">3 - Coordinar Cambio</h3>
+            <p class="text-justify">
+                El comité de aprobación de cambios es el responsable de programar los cambios y generar la programación definitiva para realizar
+                el cambio. 
+            </p>
+            <hr>
+            
+            <h4 class="text-primary">3.1 - Obtener Autorización</h4>
+            <p class="text-justify">
+                Si un cambio implica un alto riesgo, el comité de aprobación podría contactar a otras personas para obtener aprobación de los cambios. 
+            </p>
+            
+            <h4 class="text-primary">3.2 - Revisión de Cronograma de Implementación</h4>
+            <p class="text-justify">
+                Es responsabilidad del gerente de gestión de cambios y el comité de aprobación revisar cada solicitud de cambios para verificar que estén 
+                completas, que cuentan con las aprobaciones necesarias y que están de acuerdo a los procedimientos de gestión de cambios. 
+            </p>
+            
+            <h4 class="text-primary">3.3 - Elaboración de Cronograma Definitivo </h4>
+            <p class="text-justify">
+                Following the CAB meeting, the Change Manager updates the Change Requests based on the
+determination by the CAB. A final Change Schedule is an output of the CAB meeting. 
+
+            </p>
+            
+  
+            <hr> <!-- ---------------------------------------------------------- -->
+            
+            <h3 class="text-primary">4 Implementación</h3>
+            <p class="text-justify">
+                
+            </p>
+            <hr>
+            
+            <h4 class="text-primary">4.1 - Implementar Cambios</h4>
+            <p class="text-justify">
+                
+            </p>
+            
+            <h4 class="text-primary">4.2 -  Verificación de cambios exitosa</h4>
+            <p class="text-justify">
+                
+            </p>
+            
+            <h4 class="text-primary">4.3 -  Reversar cambios si es requerido</h4>
+            <p class="text-justify">
+                
+            </p>
+            
+            <h4 class="text-primary">4.4 -  Generar reportes de datos del cambio</h4>
+            <p class="text-justify">
+                
+            </p>
+            
+            <hr> <!-- ---------------------------------------------------------- -->
+            
+            <h3 class="text-primary">5 - Medir Resultados</h3>
+            <p class="text-justify">
+                
+            </p>
+            <hr>
+            
+            <h4 class="text-primary">5.1 -  Realizar revisión </h4>
+            <p class="text-justify">
+                
+            </p>
+            
+            <h4 class="text-primary">5.2 -  Auditoría </h4>
+            <p class="text-justify">
+                
+            </p>
+            
+            <h4 class="text-primary">5.3 -  Generación de Métricas </h4>
+            <p class="text-justify">
+                
+            </p>
+            
+            <h4 class="text-primary">5.4 - Distribuir Resultados </h4>
+            <p class="text-justify">
+                
             </p>
             
         </div>
