--- a/templates/cm/index.html
+++ b/templates/cm/index.html
@@ -284,8 +284,7 @@
             
             <h4 class="text-primary">3.3 - Elaboración de Cronograma Definitivo </h4>
             <p class="text-justify">
-                Following the CAB meeting, the Change Manager updates the Change Requests based on the
-determination by the CAB. A final Change Schedule is an output of the CAB meeting. 
+                Se produce un plan de implementación definitivo.
 
             </p>
             
@@ -295,55 +294,92 @@ determination by the CAB. A final Change Schedule is an output of the CAB meetin
             <h3 class="text-primary">4 Implementación</h3>
             <p class="text-justify">
                 
+                Todos los cambios requieren el nivel apropiado de aprobación previo a la fecha establecida para realizar el cambio. 
+                El implementador el cual generalmente es quien realizó la solicitud de cambio, realiza la implementación del cambio. Es 
+                responsabilidad del implementador verificar la disponibilidad del sistema antes de realizar el cambio. 
+                                
             </p>
             <hr>
             
             <h4 class="text-primary">4.1 - Implementar Cambios</h4>
             <p class="text-justify">
                 
+                El implementador debe seguir cada una de las tareas de implementación detalladas en la solicitud de cambios. Cualquier
+                desviación del plan de implementación aprobado, incluyendo requerimientos para extender el cambio aprobado, deben ser 
+                aprobados por el líder técnico. 
+                
             </p>
             
             <h4 class="text-primary">4.2 -  Verificación de cambios exitosa</h4>
             <p class="text-justify">
+                
+                El implementador debe determinar si la implementación del cambio fue existosa o no basado en los resultados 
+                del plan de pruebas que se realiza justo después de la implementación. Los criterios de aceptación de un 
+                cambio han sido definidos previamente en la solicitud de cambio.
+                <br>
+                Si un cambio no ha sido implementado de manera satisfactoria, o se implementó de manera inconpleta, el
+                implementador debe detterminar si el cambio debe ser reversado o no. Cualquier participante que se vea
+                impactado negativamente por un cambio, también puede solicitar la reversión de dicho cambio. 
                 
             </p>
             
             <h4 class="text-primary">4.3 -  Reversar cambios si es requerido</h4>
             <p class="text-justify">
                 
+                Si un cambio falla durante la implementación o no puede ser completado durante el período de implementaciónn aprobado,
+                este debe ser reversado durante la ventana de tiempo aprobada o se debe solicitar una ventana de tiempo adicional.
             </p>
             
             <h4 class="text-primary">4.4 -  Generar reportes de datos del cambio</h4>
             <p class="text-justify">
-                
+                El implementador es responsable de realizar un reporte de estado final dentro de las siguientes 24 a la realización de un cambio.
+                Este reporte debe incluir:
             </p>
+            <ul>
+                <li>Hora de inicio y finalización</li>
+                <li>Resultados de implementación de cambio</li>
+                <li>Si el cambio no se implementó de manera exitosa, los detalles de dicha condición</li>
+                <li>Descripción de fallas</li>
+                <li>Número de incidente (si aplica)</li>
+            </ul>
             
             <hr> <!-- ---------------------------------------------------------- -->
             
             <h3 class="text-primary">5 - Medir Resultados</h3>
             <p class="text-justify">
                 
+                Medir los resultados de los cambios implica realizar una revisión de la documentación de los cambios, implementación 
+                final, estatus y estadísticas/ Esta revisión se utiliza para afinar los criterios utilizados para autorizar cambios, 
+                garantizar consistencia en los procesos y mejorar el proceso como tal.
+
             </p>
             <hr>
             
             <h4 class="text-primary">5.1 -  Realizar revisión </h4>
             <p class="text-justify">
                 
+                Los gerentes de cambio, miembros de los comités de aprobación y los dueños de los procesos, son 
+                responsables de realizar una revisión de los reportes de control de cambios. Adicionalmente, deben
+                monitorear las métricas de este proceso para generar mejora constante del mismo. Se deben estudiar 
+                y comentar cuando ocurren contratiempos con el fin de identificar oportunidades de mejora. 
             </p>
             
             <h4 class="text-primary">5.2 -  Auditoría </h4>
             <p class="text-justify">
-                
+                El proceso de gestión de cambios, debe ser monitoreado para medir su efectividad. Si el proceso requiriera
+                afinamiento o ajustes, una solicitud de modificación del proceso se debe generar por medio de las autoridades
+                correspondientes. 
             </p>
             
             <h4 class="text-primary">5.3 -  Generación de Métricas </h4>
             <p class="text-justify">
-                
+                Se deben generar reportes de gestión de cambios que reflejen el rendimiento en la actividad de cambio y los 
+                índices de éxito durante la actividad de cambio. 
             </p>
             
             <h4 class="text-primary">5.4 - Distribuir Resultados </h4>
             <p class="text-justify">
-                
+                Los reportes de cambios finales se distribuyen por medio de correo electrónico utilizando listas de distribución. 
             </p>
             
         </div>
