Plan de Capacidad.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,6 +34,7 @@
                 <li><a href="/">Catálogo</a></li>
                 <li><a href="{{url_for('get_casos')}}">Casos</a></li>
                   <li><a href="{{ url_for('rfc') }}">Solicitud de Cambio</a></li>
+                  <li><a href="{{ url_for('capacity') }}">Plan de Capacidad</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="">*</a></li>
